[package]
name = "rppal-mcp23s17"
version = "0.1.0"
authors = ["Mike Walmsley"]
description = """MCP23S17 driver

An experimental driver for the MCP23S17 16 bit I/O expander chip
addressed over the SPI bus on Raspbery Pi peripherals, such as the 
PiFace Digital HAT. Requires RPPAL for the SPI interface.
"""
license = "MIT"
readme = "README.md"
homepage = "https://docs.rs/rppal-mcp23s17/"
repository = "https://github.com/solimike/rppal-mcp23s17/"
keywords = ["MCP23S17", "Raspberry", "Raspberry_Pi", "PiFaceDigital", "RPPAL"]
categories = ["hardware-support", "embedded"]
edition = "2021"

# When using the "mockspi" feature for dev builds the original resolver's desire
# to merge features between release and test builds is inappropriate, so use the
# V2 resolver.
resolver = "2"

[dependencies]
bitflags = "2.7"
log = "0.4.17"
rppal = "0.22.1"
thiserror = "2.0.11"

[features]

# Use of this feature causes the crate to use a mock version of the interface to the 
# SPI which is suited to running tests without needing the target Raspberry Pi
# hardware.
mockspi = []
